# IDS-Training-Lib-Packaging

./: LICENSE  README.md  pyproject.toml
example/: my_script.py
my_multiplication_lib/: common_mult.py
super_kawaii_multiplication_lib/: __init__.py  fancy_mult.py
tests/: test_mult.py
